--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">weather</string>
+    <string name="app_name">Local Weather</string>
+    <string name="fragment_cities.edittext.hint">City name</string>
 </resources>
