--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="fragment_cities.edittext.hint">City name</string>
     <string name="fragment_cities.geolocation_disabled">We could not determine your geolocation,
         try to find the desired city through the search</string>
+
+    <string name="fragment_weather.degree">79°</string>
 </resources>
