--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,16 @@
     <string name="fragment_cities.geolocation_disabled">We could not determine your geolocation,
         try to find the desired city through the search</string>
 
-    <string name="fragment_weather.degree">°</string>
+    <string name="fragment_weather.degree">°C</string>
     <string name="fragment_weather.wind">WIND</string>
     <string name="fragment_weather.wind_speed">km/h</string>
     <string name="fragment_weather.humidity">HUMIDITY</string>
     <string name="fragment_weather.humidity_percent">%</string>
     <string name="fragment_weather.pressure">PRESSURE</string>
     <string name="fragment_weather.pressure_mbar">mbar</string>
+    <string name="fragment_weather.no_cities">No city found for this request. Use the search or</string>
 
+    <string name="error.check_network_connection">Failed to load data, check network connection</string>
+    <string name="error.try_later">An error has occurred, try again later</string>
+    <string name="snackbar.title.try_again">Try again</string>
 </resources>
